--- a/views/estudiantes/listar.ejs
+++ b/views/estudiantes/listar.ejs
@@ -1,5 +1,8 @@
 <div class="container mt-4">
-    <h2 class="mb-4">Lista de Estudiantes</h2>
+    <div class="d-flex justify-content-between align-items-center mb-3">
+        <h2>Lista de Estudiantes</h2>
+        <a href="/estudiantes/crear" class="btn btn-success">➕ Agregar Estudiante</a>
+    </div>
     <table id="studentsTable"  class="table table-striped table-bordered">
         <thead>
         </thead>
